--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "inquirer": "^8.2.5",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "sass": "^1.63.2",
     "standard-version": "^9.5.0"
   },
   "config": {
