--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@commitlint/cz-commitlint": "^17.5.0",
+    "@playwright/test": "^1.35.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -29,6 +32,8 @@
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "inquirer": "^8.2.5",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
